--- a/ventura_frontend/index.html
+++ b/ventura_frontend/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Ventura Trading App</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Add Chart.js -->
 </head>
 <body>
     <header>
@@ -16,30 +15,28 @@
             <a href="#" id="login-link">Login</a>
             <a href="#" id="register-link">Register</a>
             <a href="#" id="dashboard-link" style="display: none;">Dashboard</a>
-            <a href="#" id="profile-link" style="display: none;">Profile</a> <!-- New link for profile -->
+            <a href="#" id="profile-link" style="display: none;">Profile</a>
             <a href="#" id="portfolio-link" style="display: none;">Portfolio</a>
             <a href="#" id="live-trade-link" style="display: none;">Live Trade</a>
         </nav>
     </header>
     <main id="main-content">
         <!-- Dynamic content will be loaded here -->
-        <div id="investment-settings">
-            
-        </div>
-        <button id="initiate-trade-button">Initiate Trade</button> <!-- Button to initiate trades -->
+        <div id="investment-settings"></div>
+        <button id="initiate-trade-button">Initiate Trade</button>
         <div id="live-trades">
             <select id="live-trades-select" onchange="visualizeLiveTrade(this.value)">
                 <!-- Live trades options will be populated here -->
             </select>
         </div>
-        <div id="portfolio"></div> <!-- Element to display portfolio -->
+        <div id="portfolio"></div>
     </main>
     <footer>
         <p>&copy; 2024 Ventura Trading App</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/app.js"></script>
-    <script type="module" src="js/dashboard.js"></script> <!-- Add dashboard.js -->
-    <script type="module" src="js/liveTrade.js"></script> <!-- Add liveTrade.js -->
+    <script type="module" src="js/dashboard.js"></script>
+    <script type="module" src="js/portfolio.js"></script>
 </body>
 </html>
